[project]
name = "driving-agent"
version = "0.1.0"
description = "Implementation of an agent to learn a value function."
authors = [
    { name = "Arvin Kushwaha", email = "arvin.singh.kushwaha@gmail.com" }
]
dependencies = [
    "torch>=2.3.0",
]
readme = "../README.md"
requires-python = ">= 3.12"
license = { file = "../LICENSE.txt" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/driving_agent"]
